@@ -1,3 +1,7 @@
+2001-08-06  Dave Peticolas  <dave@krondo.com>
+
+	* src/register/pricecell.c: fix bugs
+
 2001-08-05  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/window-register.c: move close button to left
